  TEZ-3630. Tez UI: Use DAG status for controlling auto-refresh polling
  TEZ-3639. Tez UI: Footer pagination is improper in landing page
  TEZ-3640. Tez UI: Add associated llap application id to queries page
  TEZ-3642. Tez UI: Auto-refresh is not stopping when DAG is the main entity
  TEZ-3503. Tez UI: Support search by queue name
  TEZ-3656. Tez UI: Status correction is not working as expected

Release 0.8.6: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES:


Release 0.8.5: 2016-03-13

INCOMPATIBLE CHANGES

ALL CHANGES:

  TEZ-3624. Split multiple calls on the same line in TaskCommunicatorContextImpl.
  TEZ-3550. Provide access to sessionId/dagId via DagClient.
  TEZ-3609. Improve ATSv15 performance for DAG entities read calls.
  TEZ-3244. Allow overlap of input and output memory when they are not concurrent
  TEZ-3601. Add another HistoryLogLevel to suppress TaskAttempts at specific levels
  TEZ-3462. Task attempt failure during container shutdown loses useful container diagnostics
  TEZ-3574. Container reuse won't pickup extra dag level local resource.
  TEZ-3566. Avoid caching fs isntances in TokenCache after a point.
  TEZ-3568. Update SecurityUtils configuration to pick user provided configuration.
  TEZ-3559. TEZ_LIB_URIS doesn't work with schemes different than the defaultFS
  TEZ-3549. TaskAttemptImpl does not initialize TEZ_TASK_PROGRESS_STUCK_INTERVAL_MS correctly
  TEZ-3537. ArrayIndexOutOfBoundsException with empty environment variables/Port YARN-3768 to Tez
  TEZ-3536. NPE in WebUIService start when host resolution fails.
  TEZ-3534. Differentiate thread names on Fetchers, minor changes to shuffle shutdown code.
  TEZ-3491. Tez job can hang due to container priority inversion.
  TEZ-3533. ShuffleScheduler should shutdown threadpool on exit.
  TEZ-3493. DAG submit timeout cannot be set to a month
  TEZ-3505. Move license to the file header for TezBytesWritableSerialization
  TEZ-3486. COMBINE_OUTPUT_RECORDS/COMBINE_INPUT_RECORDS are not correct