@@ -219,6 +219,7 @@ ALL CHANGES:
   TEZ-3642. Tez UI: Auto-refresh is not stopping when DAG is the main entity
   TEZ-3503. Tez UI: Support search by queue name
   TEZ-3656. Tez UI: Status correction is not working as expected
+  TEZ-3653. Tez UI: Swimlane tooltip is not proper for running DAGs
 
 Release 0.8.6: Unreleased
 
